--- a/form.xhtml
+++ b/form.xhtml
@@ -24,7 +24,7 @@
             <img src="./assests/christ_logo.jpeg" class="img-fluid mb-5" alt="Logo" id="christLogo" />
             <h1>FeedBack Form</h1>
 
-            <form class=" border border-info rounded-lg p-5 mw-100 custom forReset" >
+            <form class=" border border-info rounded-lg p-5 mw-100 custom forReset">
                 <!-- name input -->
                 <div class="form-outline mb-2">
                     <label class="form-label" for="fname">Name</label>
@@ -128,7 +128,7 @@
                           type="submit"
                           class="btn btn-dark btn-lg"
                           style="padding-left: 2.5rem; padding-right: 2.5rem"
-
+                          onclick="valAll()"
                         >
                           Submit
                         </button>
