--- a/form.xhtml
+++ b/form.xhtml
@@ -123,10 +123,10 @@
                     
                 <div class="container-fluid d-flex flex-row justify-content-between align-items-center border-infos">
 
-                    <div class="text-center text-lg-start mt-4 pt-2">
+                    <div class="container-fluid text-center text-lg-start mt-4 pt-2">
                         <button
                           type="submit"
-                          class="btn btn-dark btn-lg"
+                          class="btn btn-primary btn-lg"
                           style="padding-left: 2.5rem; padding-right: 2.5rem"
                           onclick="valAll()"
                         >
@@ -134,10 +134,10 @@
                         </button>
 
                     </div>
-                        <div class="text-center text-lg-start mt-4 pt-2">
+                        <div class="container-fluid text-center text-lg-start mt-4 pt-2 ">
                             <button
                               type="reset"
-                              class="btn btn-dark btn-lg"
+                              class="btn btn-primary btn-lg"
                               style="padding-left: 2.5rem; padding-right: 2.5rem"
                               onclick="resetme()"
                             >
