--- a/login.xhtml
+++ b/login.xhtml
@@ -39,7 +39,7 @@
             />
           </div>
           <div class="col-md-8 col-lg-6 col-xl-4 offset-xl-1">
-            <form class="m-3" action="./form.xhtml">
+            <form class="m-3 tovalidate" >
               <div class="d-flex flex-row align-items-center justify-content-between">
              
                 <div>
@@ -116,6 +116,7 @@
                   type="submit"
                   class="btn btn-dark btn-lg"
                   style="padding-left: 2.5rem; padding-right: 2.5rem"
+                  onclick="valAll()"
                 >
                   Login
                 </button>
